--- a/02_notasDoAluno.html
+++ b/02_notasDoAluno.html
@@ -7,11 +7,19 @@
     */
 
     //Entrada
-
+    const notasAluno = [7, 5, 9, 8];
+    let menorNota = notasAluno.sort()[0];;
+    let media = [];
+    let soma = 0;
+    
 
     //Processamento
-
+    for(let item of notasAluno){
+        soma += item
+        
+    }
 
     //Saída
+    alert(`Menor nota: ${menorNota}\nSua média ${mediaNotas}`)
 
 </script>
