--- a/01_tabuada.html
+++ b/01_tabuada.html
@@ -7,11 +7,16 @@
     */
 
     //Entrada
-
+    alert("Veja a tabuada do 9")
+    let multiplicador = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+    let resultado = []
 
     //Processamento
+    for(let item of multiplicador){
+        resultado.push(`9*${item}=`+9*item)
+    }
 
-
-    //Saída
+    //Saída`
+    alert(`Os resultados são: ${resultado.join("; \n")}.`);
     
 </script>
