--- a/06_comprasMercado.html
+++ b/06_comprasMercado.html
@@ -7,10 +7,10 @@
     */
 
     //Entrada
-
+    let lista = ["A", "E", 2, 4.8, "CINQUENTA", "Araquari", 80, 10, 3.2];
 
     //Processamento
-
+    
 
     //Saída
 
