--- a/06_comprasMercado.html
+++ b/06_comprasMercado.html
@@ -8,10 +8,16 @@
 
     //Entrada
     let lista = ["A", "E", 2, 4.8, "CINQUENTA", "Araquari", 80, 10, 3.2];
+    let soma = 0
 
     //Processamento
-    
+    for (let item of lista) {
+        if(!isNaN(item)){
+            soma += item
+        }
+    }
 
     //Saída
+    alert(`O resultado é: ${soma.toFixed(2).replace(".",",")}.`)
 
 </script>
