--- a/03_identificarCaracteres.html
+++ b/03_identificarCaracteres.html
@@ -6,11 +6,35 @@
     */
 
     //Entrada
-
+    const palavra = prompt("Digite uma palavra, sem acentos ou caracteres especiais:").toLowerCase().trim();
+    let vogais = ['a', 'e', 'i', 'o', 'u'];
+    let totalVogal = 0;
+    let totalConsoantes = 0
 
     //Processamento
-
+    for (let item of palavra) {
+        if(vogais.indexOf(item) != -1) {
+            totalVogal += 1;
+        }
+        else{
+            totalConsoantes += 1
+        }
+    }
 
     //Saída
+    alert(`Se tem ${totalVogal} vogais e\n ${totalConsoantes} consoantes.`)
+/*var contarVogais = function(palavra) {
+    var totalVogal = 0;
+    var vogais = ['a', 'e', 'i', 'o', 'u'];
+    var i;
 
+    for (i = 0; i < palavra.length; i++ ) {
+        if(vogais.indexOf(palavra[i]) != -1) {
+            totalVogal++;
+        }
+    }
+
+    return totalVogal;
+}
+*/
 </script>
