--- a/02_notasDoAluno.html
+++ b/02_notasDoAluno.html
@@ -8,18 +8,18 @@
 
     //Entrada
     const notasAluno = [7, 5, 9, 8];
-    let menorNota = notasAluno.sort()[0];;
+    let menorNota = notasAluno.sort()[0];
+    let maiorNota = notasAluno.reverse()[0];
     let media = [];
-    let soma = 0;
     
 
     //Processamento
     for(let item of notasAluno){
         soma += item
-        
     }
+    media = soma / notasAluno.length;
 
     //Saída
-    alert(`Menor nota: ${menorNota}\nSua média ${mediaNotas}`)
+    alert(`Menor nota: ${menorNota}\nSua média ${media}`);
 
 </script>
