--- a/01_tabuada.html
+++ b/01_tabuada.html
@@ -7,7 +7,7 @@
     */
 
     //Entrada
-    const tabuada = prompt("Qual tabuada deseja?()")
+    const tabuada = prompt("Qual tabuada deseja?")
     let multiplicador = [1, 2, 3, 4, 5, 6, 7, 8, 9];
     let resultado = []
 
